--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -18,8 +18,9 @@
 <resources>
     <color name="photo_placeholder">#ccc</color>
 
-    <color name="ltgray">#ffe0e0e0</color>
     <color name="theme_primary">#fd5621</color>
     <color name="theme_primary_dark">#c12e00</color>
     <color name="theme_accent">#178fff</color>
+
+    <color name="content">#78000000</color>
 </resources>
