--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -21,6 +21,7 @@
         <item name="colorPrimary">@color/theme_primary</item>
         <item name="colorPrimaryDark">@color/theme_primary_dark</item>
         <item name="colorAccent">@color/theme_accent</item>
+        <item name="android:textColor">@color/content</item>
     </style>
 
     <style name="AppTheme.Detail">
