--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -8,4 +8,7 @@
     <dimen name="fab_press_translation_z">6dp</dimen>
     <dimen name="fab_margin">24dp</dimen>
 
+    <!-- Needed if we aren't including the Material Design Library -->
+    <dimen name="appbar_elevation">4dp</dimen>
+
 </resources>
