--- a/src/main/res/layout/activity_article_list.xml
+++ b/src/main/res/layout/activity_article_list.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="112dp"
         android:theme="@style/AppTheme"
+        android:gravity="bottom"
         app:elevation="@dimen/appbar_elevation">
 
         <android.support.design.widget.CollapsingToolbarLayout
